@@ -136,4 +136,4 @@ results <- analyse_pIRIRSequence(object,
 
 \keyword{datagen}
 \keyword{plot}
-\section{Function version}{0.1 (2014-10-02 18:49:01)}
+\section{Function version}{0.1.1 (2014-11-11 14:51:01)}
